; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/umath/extr_ufunc_object.c_trivial_two_operand_loop.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/umath/extr_ufunc_object.c_trivial_two_operand_loop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NPY_BEGIN_THREADS_DEF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"two operand loop count %d\0A\00", align 1
@NPY_END_THREADS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i32 (i8**, i64*, i64*, i8*)*, i8*)* @trivial_two_operand_loop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @trivial_two_operand_loop(i32** %0, i32 (i8**, i64*, i64*, i8*)* %1, i8* %2) #0 {
  %4 = alloca i32**, align 8
  %5 = alloca i32 (i8**, i64*, i64*, i8*)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca [2 x i8*], align 16
  %8 = alloca [2 x i64], align 16
  %9 = alloca [2 x i64], align 16
  %10 = alloca i32, align 4
  store i32** %0, i32*** %4, align 8
  store i32 (i8**, i64*, i64*, i8*)* %1, i32 (i8**, i64*, i64*, i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %11 = load i32, i32* @NPY_BEGIN_THREADS_DEF, align 4
  %12 = load i32**, i32*** %4, align 8
  %13 = getelementptr inbounds i32*, i32** %12, i64 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @PyArray_DESCR(i32* %14)
  %16 = call i64 @PyDataType_REFCHK(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %25, label %18

18:                                               ; preds = %3
  %19 = load i32**, i32*** %4, align 8
  %20 = getelementptr inbounds i32*, i32** %19, i64 1
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @PyArray_DESCR(i32* %21)
  %23 = call i64 @PyDataType_REFCHK(i32 %22)
  %24 = icmp ne i64 %23, 0
  br label %25

25:                                               ; preds = %18, %3
  %26 = phi i1 [ true, %3 ], [ %24, %18 ]
  %27 = zext i1 %26 to i32
  store i32 %27, i32* %10, align 4
  %28 = load i32**, i32*** %4, align 8
  %29 = getelementptr inbounds i32*, i32** %28, i64 0
  %30 = load i32*, i32** %29, align 8
  %31 = load i32**, i32*** %4, align 8
  %32 = getelementptr inbounds i32*, i32** %31, i64 1
  %33 = load i32*, i32** %32, align 8
  %34 = getelementptr inbounds [2 x i64], [2 x i64]* %8, i64 0, i64 0
  %35 = load i64, i64* %34, align 16
  %36 = getelementptr inbounds [2 x i8*], [2 x i8*]* %7, i64 0, i64 0
  %37 = load i8*, i8** %36, align 16
  %38 = getelementptr inbounds [2 x i8*], [2 x i8*]* %7, i64 0, i64 1
  %39 = load i8*, i8** %38, align 8
  %40 = getelementptr inbounds [2 x i64], [2 x i64]* %9, i64 0, i64 0
  %41 = load i64, i64* %40, align 16
  %42 = getelementptr inbounds [2 x i64], [2 x i64]* %9, i64 0, i64 1
  %43 = load i64, i64* %42, align 8
  %44 = call i32 @PyArray_PREPARE_TRIVIAL_PAIR_ITERATION(i32* %30, i32* %33, i64 %35, i8* %37, i8* %39, i64 %41, i64 %43)
  %45 = getelementptr inbounds [2 x i64], [2 x i64]* %8, i64 0, i64 0
  %46 = load i64, i64* %45, align 16
  %47 = getelementptr inbounds [2 x i64], [2 x i64]* %8, i64 0, i64 1
  store i64 %46, i64* %47, align 8
  %48 = getelementptr inbounds [2 x i64], [2 x i64]* %8, i64 0, i64 0
  %49 = load i64, i64* %48, align 16
  %50 = trunc i64 %49 to i32
  %51 = call i32 @NPY_UF_DBG_PRINT1(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %50)
  %52 = load i32, i32* %10, align 4
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %58, label %54

54:                                               ; preds = %25
  %55 = getelementptr inbounds [2 x i64], [2 x i64]* %8, i64 0, i64 0
  %56 = load i64, i64* %55, align 16
  %57 = call i32 @NPY_BEGIN_THREADS_THRESHOLDED(i64 %56)
  br label %58

58:                                               ; preds = %54, %25
  %59 = load i32 (i8**, i64*, i64*, i8*)*, i32 (i8**, i64*, i64*, i8*)** %5, align 8
  %60 = getelementptr inbounds [2 x i8*], [2 x i8*]* %7, i64 0, i64 0
  %61 = getelementptr inbounds [2 x i64], [2 x i64]* %8, i64 0, i64 0
  %62 = getelementptr inbounds [2 x i64], [2 x i64]* %9, i64 0, i64 0
  %63 = load i8*, i8** %6, align 8
  %64 = call i32 %59(i8** %60, i64* %61, i64* %62, i8* %63)
  %65 = load i32, i32* @NPY_END_THREADS, align 4
  ret void
}

declare dso_local i64 @PyDataType_REFCHK(i32) #1

declare dso_local i32 @PyArray_DESCR(i32*) #1

declare dso_local i32 @PyArray_PREPARE_TRIVIAL_PAIR_ITERATION(i32*, i32*, i64, i8*, i8*, i64, i64) #1

declare dso_local i32 @NPY_UF_DBG_PRINT1(i8*, i32) #1

declare dso_local i32 @NPY_BEGIN_THREADS_THRESHOLDED(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
